Added pictures and fixed pages

--- a/Climbing_Website_P4.html
+++ b/Climbing_Website_P4.html
@@ -82,7 +82,7 @@
     <body>
         <div id="top_menu">
         
-        <h1 id="main_title">Climbing Variations</h1>
+        <h1 id="main_title">Where to climb</h1>
          <div class="topnav">
   <a href="Climbing_Website_P2.html">Climbing Gear</a>
   <a href="Climbing_Website_P1.html">Climbing Varitions</a>
@@ -96,7 +96,7 @@
        </div>
 
     <div id="Content">
-       <img src="Climb_Pic_4.jpg" alt="A woman bouldering indoor" id="Main_Picture">
+       <img src="Climb_Pic_3.jpg" alt="A woman bouldering indoor" id="Main_Picture">
 
 
         <div id="text_part">
