--- a/Climbing_Website_P4.html
+++ b/Climbing_Website_P4.html
@@ -62,7 +62,7 @@
         #Content {
 
          position: absolute;  
-         left: 20%; 
+         left: 22.5%; 
          top: 175px;
          width: 80%;
 
@@ -73,6 +73,23 @@
           width: 68.5%;
 
          }  
+
+
+        #Desert_Pic {
+
+            top: 1000px;
+            width: 21%;
+            position: absolute;
+            left: 0.5%;
+
+        }
+
+        #Mountain_Pic {
+
+            top: 1500px;
+            width: 21%;
+            position: absolute;
+            right: 0.5%;
 
 
 
@@ -94,6 +111,9 @@
         
            
        </div>
+
+       <img src="Climb_Pic_Desert.jpg" alt="Desert Mountain" id="Desert_Pic">
+       <img src="Climb_Pic_Mountain.jpg" alt="Forest Mountain" id="Mountain_Pic">
 
     <div id="Content">
        <img src="Climb_Pic_3.jpg" alt="A woman bouldering indoor" id="Main_Picture">
