--- a/Climbing_Website_P4.html
+++ b/Climbing_Website_P4.html
@@ -105,7 +105,7 @@
   <a href="Climbing_Website_P1.html">Climbing Varitions</a>
   <a href="Climbing_Website_P3.html">Climbing Tips</a>
   <a href="Climbing_Website_P4.html">Where To Climb</a>
-  <a href="#">Link</a>
+  <a href="Climbing_Website_P5.html">Climbing Workout</a>
 </div>
         
         
@@ -121,35 +121,27 @@
 
         <div id="text_part">
             <div>
-            <h3>HEADING 1</h3>    
+            <h3>Outdoors</h3>    
             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sodales, neque eget mollis tincidunt, est arcu sollicitudin est, ac feugiat dui libero a magna. Integer non iaculis arcu. Sed volutpat tellus ligula, non pellentesque nisi ullamcorper at. Duis bibendum consequat lacinia. Integer dapibus enim sit amet arcu interdum maximus. Suspendisse dignissim rhoncus tellus, sit amet ullamcorper erat cursus sed. Pellentesque eget luctus magna. Ut velit arcu, commodo vitae tincidunt non, tempor non enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in volutpat leo, in rutrum orci. Nunc hendrerit fringilla pharetra. Fusce ultricies porta justo ac luctus.</p>
             </div>
             <div>
-            <h3>HEADING</h3> 
+            <h3>Indoors</h3> 
             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sodales, neque eget mollis tincidunt, est arcu sollicitudin est, ac feugiat dui libero a magna. Integer non iaculis arcu. Sed volutpat tellus ligula, non pellentesque nisi ullamcorper at. Duis bibendum consequat lacinia. Integer dapibus enim sit amet arcu interdum maximus. Suspendisse dignissim rhoncus tellus, sit amet ullamcorper erat cursus sed. Pellentesque eget luctus magna. Ut velit arcu, commodo vitae tincidunt non, tempor non enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in volutpat leo, in rutrum orci. Nunc hendrerit fringilla pharetra. Fusce ultricies porta justo ac luctus.</p>
             </div>
             <div>
-            <h3>HEADING</h3> 
+            <h3>Desert Mountains</h3> 
             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sodales, neque eget mollis tincidunt, est arcu sollicitudin est, ac feugiat dui libero a magna. Integer non iaculis arcu. Sed volutpat tellus ligula, non pellentesque nisi ullamcorper at. Duis bibendum consequat lacinia. Integer dapibus enim sit amet arcu interdum maximus. Suspendisse dignissim rhoncus tellus, sit amet ullamcorper erat cursus sed. Pellentesque eget luctus magna. Ut velit arcu, commodo vitae tincidunt non, tempor non enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in volutpat leo, in rutrum orci. Nunc hendrerit fringilla pharetra. Fusce ultricies porta justo ac luctus.</p>
             </div>
             <div>
-            <h3>HEADING</h3> 
+            <h3>Forest Mountains</h3> 
             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sodales, neque eget mollis tincidunt, est arcu sollicitudin est, ac feugiat dui libero a magna. Integer non iaculis arcu. Sed volutpat tellus ligula, non pellentesque nisi ullamcorper at. Duis bibendum consequat lacinia. Integer dapibus enim sit amet arcu interdum maximus. Suspendisse dignissim rhoncus tellus, sit amet ullamcorper erat cursus sed. Pellentesque eget luctus magna. Ut velit arcu, commodo vitae tincidunt non, tempor non enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in volutpat leo, in rutrum orci. Nunc hendrerit fringilla pharetra. Fusce ultricies porta justo ac luctus.</p>
             </div>
             <div>
-            <h3>HEADING</h3> 
+            <h3>Cold Weather</h3> 
             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sodales, neque eget mollis tincidunt, est arcu sollicitudin est, ac feugiat dui libero a magna. Integer non iaculis arcu. Sed volutpat tellus ligula, non pellentesque nisi ullamcorper at. Duis bibendum consequat lacinia. Integer dapibus enim sit amet arcu interdum maximus. Suspendisse dignissim rhoncus tellus, sit amet ullamcorper erat cursus sed. Pellentesque eget luctus magna. Ut velit arcu, commodo vitae tincidunt non, tempor non enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in volutpat leo, in rutrum orci. Nunc hendrerit fringilla pharetra. Fusce ultricies porta justo ac luctus.</p>
             </div>
             <div>
-            <h3>HEADING</h3> 
-            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sodales, neque eget mollis tincidunt, est arcu sollicitudin est, ac feugiat dui libero a magna. Integer non iaculis arcu. Sed volutpat tellus ligula, non pellentesque nisi ullamcorper at. Duis bibendum consequat lacinia. Integer dapibus enim sit amet arcu interdum maximus. Suspendisse dignissim rhoncus tellus, sit amet ullamcorper erat cursus sed. Pellentesque eget luctus magna. Ut velit arcu, commodo vitae tincidunt non, tempor non enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in volutpat leo, in rutrum orci. Nunc hendrerit fringilla pharetra. Fusce ultricies porta justo ac luctus.</p>
-            </div>
-            <div>
-            <h3>HEADING</h3> 
-            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sodales, neque eget mollis tincidunt, est arcu sollicitudin est, ac feugiat dui libero a magna. Integer non iaculis arcu. Sed volutpat tellus ligula, non pellentesque nisi ullamcorper at. Duis bibendum consequat lacinia. Integer dapibus enim sit amet arcu interdum maximus. Suspendisse dignissim rhoncus tellus, sit amet ullamcorper erat cursus sed. Pellentesque eget luctus magna. Ut velit arcu, commodo vitae tincidunt non, tempor non enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in volutpat leo, in rutrum orci. Nunc hendrerit fringilla pharetra. Fusce ultricies porta justo ac luctus.</p>
-            </div>
-            <div>
-            <h3>HEADING</h3> 
+            <h3>Warm Weather</h3> 
             <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sodales, neque eget mollis tincidunt, est arcu sollicitudin est, ac feugiat dui libero a magna. Integer non iaculis arcu. Sed volutpat tellus ligula, non pellentesque nisi ullamcorper at. Duis bibendum consequat lacinia. Integer dapibus enim sit amet arcu interdum maximus. Suspendisse dignissim rhoncus tellus, sit amet ullamcorper erat cursus sed. Pellentesque eget luctus magna. Ut velit arcu, commodo vitae tincidunt non, tempor non enim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in volutpat leo, in rutrum orci. Nunc hendrerit fringilla pharetra. Fusce ultricies porta justo ac luctus.</p>
             </div>       
         </div>  
