--- a/Climbing_Website_P3.html
+++ b/Climbing_Website_P3.html
@@ -131,7 +131,7 @@
                 Sed lobortis rutrum ex sed commodo. Nunc tristique sit amet nulla molestie elementum. Duis finibus eros sem, quis feugiat nulla ultrices faucibus. Cras a bibendum libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis rutrum ex sed commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lobortis rutrum ex sed commodo. Nunc tristique sit amet nulla molestie elementum. Duis finibus eros sem, quis feugiat nulla ultrices faucibus. Cras a bibendum libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                 <div id=Link_Pic>
                 <a href="Climbing_Website_P5.html" target="_blank">
-                <img src="Climb_Pic_Workout.png" alt="More Workout Tips" style="width:80%;">
+                <img src="Climb_Pic_Workout.png" alt="More Workout Tips" style="width:80%; margin-top: 10px;">
                 </a>
                 </div> 
             </div>
