--- a/Climbing_Website_P4.html
+++ b/Climbing_Website_P4.html
@@ -91,6 +91,13 @@
             position: absolute;
             right: 0.5%;
 
+        }
+
+        h3 {
+
+            font-family: fantasy;
+        }
+
 
 
                      
