Changed P3 to index

--- a/Climbing_Website_P5.html
+++ b/Climbing_Website_P5.html
@@ -159,7 +159,7 @@
     <div class="topnav">
       <a href="Climbing_Website_P2.html">Climbing Gear</a>
       <a href="Climbing_Website_P1.html">Climbing Varitions</a>
-      <a href="Climbing_Website_P3.html">Climbing Tips</a>
+      <a href="index.html">Climbing Tips</a>
       <a href="Climbing_Website_P4.html">Where To Climb</a>
       <a href="Climbing_Website_P5.html">Climbing Workout</a>
     </div>
