--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             position: fixed;                
             margin-top: 85px;
             z-index: 2;
+            width: 100%;
         }
 
         #Info_Section {
@@ -71,7 +72,8 @@
             z-index: 3;
             background-color: white;
             top: 500px;
-            height: 700px;
+            height: 750px;
+            overflow-y: auto;
 
 
         }
@@ -118,7 +120,7 @@
 
         </div>
 
-    <img src="Climb_Pic_2.jpg" alt="A woman climbing outdoors" id="Main_Picture_For_P3" width=100%>
+    <img src="Climb_Pic_2.jpg" alt="A woman climbing outdoors" id="Main_Picture_For_P3">
 
 
         <div id="Info_Section">
