--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             margin-top: 85px;
             z-index: 2;
             width: 100%;
+            left:  0px;
         }
 
         #Info_Section {
@@ -72,8 +73,9 @@
             z-index: 3;
             background-color: white;
             top: 500px;
-            height: 750px;
-            overflow-y: auto;
+            height: auto;
+            margin-right: 2px;
+            margin-left: 2px;
 
 
         }
@@ -95,7 +97,7 @@
          #IParagraph3 {
 
             position: absolute;
-            left: 36.5%;
+            left: 38%;
             
         }
 
@@ -109,14 +111,14 @@
     <body>
         <div id="top_menu">
         
-        <h1 id="main_title">Climbing Tips</h1>
-         <div class="topnav">
-          <a href="Climbing_Website_P2.html">Climbing Gear</a>
-          <a href="Climbing_Website_P1.html">Climbing Varitions</a>
-          <a href="index.html">Climbing Tips</a>
-          <a href="Climbing_Website_P4.html">Where To Climb</a>
-          <a href="Climbing_Website_P5.html">Climbing Workout</a>
-        </div>
+                <h1 id="main_title">Climbing Tips</h1>
+            <div class="topnav">
+                  <a href="Climbing_Website_P2.html">Climbing Gear</a>
+                  <a href="Climbing_Website_P1.html">Climbing Varitions</a>
+                  <a href="index.html">Climbing Tips</a>
+                  <a href="Climbing_Website_P4.html">Where To Climb</a>
+                  <a href="Climbing_Website_P5.html">Climbing Workout</a>
+            </div>
 
         </div>
 
